# safep

./: .gitignore  AFEP_parse.py  AlternativeParser_noBAR.ipynb  AlternativeParser_noBAR.py  Analysis_Scripts.py  BAR_Estimator_Basic.ipynb  BAR_Estimator_Clean.ipynb  BAR_Estimator_Expanded.ipynb  BAR_NAMD_alchemlyb.ipynb  BAR_NAMD_alchemlyb.py  BAR_NAMD_alchemlyb_combine.ipynb  Batch_Basic.ipynb  Comparator.ipynb  Experimental_Single.ipynb  FFT_dE_workInProgress.ipynb  GenPaperFigures-Copy1.ipynb  GenPaperFigures.ipynb  GenProteinFigures.ipynb  Process_Single.ipynb  README.md  SimulatedData.ipynb  Untitled.ipynb  Untitled1.ipynb  WT_dG.ipynb  citation.cff  generate_dbc_colvar.vmd.tcl  helpers.py  makeAlphaNumeric.sh  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: .pylintrc  code_qc.yml  tests.yml
.ipynb_checkpoints/: AFEP_parse-checkpoint.py  AlternativeParser_noBAR-checkpoint.ipynb  Analysis_Scripts-checkpoint.py  BAR_Estimator_Basic-checkpoint.ipynb  BAR_Estimator_Expanded-checkpoint.ipynb  BAR_NAMD_alchemlyb-checkpoint.ipynb  Batch_Basic-checkpoint.ipynb  Comparator-checkpoint.ipynb  FFT_dE_workInProgress-checkpoint.ipynb  Process_Single-checkpoint.ipynb
Experimental/: GenMembraneFigures.ipynb
SAFEP/: setup.py
SAFEP/SAFEP/: __init__.py  estimators.py  fileIO.py  helpers.py  plotting.py  processing.py
Sample Notebooks/: BAR_Estimator_Basic.ipynb  BAR_Estimator_Expanded.ipynb  Basic_FEP.ipynb  Minimal_FEP.ipynb
Sample Notebooks/BuildingBlocks/: Make_Notebooks.sh  basic.ipynb  generate_basic_plots.ipynb  imports_and_constants.ipynb
Sample Notebooks/Sample_Data/: idws1.fepout
Sample_Notebooks/: BAR_Estimator_Basic.ipynb  BAR_Estimator_Basic_w_Overlap.ipynb  BAR_Estimator_Basic_w_Wasserstein.ipynb  BAR_Estimator_Multiple_Replicas.ipynb  RFEP_analysis.ipynb  RFEP_analysis.py  RFEP_decouple.colvars.traj  Replica3
Sample_Notebooks/BuildingBlocks/: generate_basic_plots.ipynb  imports_and_constants.ipynb  plot_definitions.ipynb  read_process_get_dG.ipynb  user_parameters.ipynb
Sample_Notebooks/Legacy/: AlternativeParser_noBAR.ipynb  BAR_Estimator_Expanded.ipynb  Batch_Basic.ipynb
TemplateRun/: common_POCE_A.namd  config_POCE_A.yaml  do_run_CE.sh  runEQ.sh  sample_procedure.md  starting.POCE.namd  starting.POCE_A.coor  starting.POCE_A.vel  starting.POCE_A.xsc  starting.POCE_A.xst  zrestraint.POCE.colvars
cli/: cli_example.sh  example.conf  safepcli.py
docs/: conf.py  getting-started.rst  index.rst  modules.rst  requirements.txt  safep.rst
safep/: .pylintrc  AFEP_parse.py  RFEP_analysis.py  TI.py  __init__.py  estimators.py  fepruns.py  fileIO.py  helpers.py  moving_wall_TI.py  plotting.py  process_TI.py  processing.py  setup.py
safep/cli/: __init__.py  (+1 more)
utilities/: tilt.tcl
(+25 files in other folders)
